[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/enemies/big_enemy_ship_1.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/big_enemy_ship_death.png" type="Texture" id=2]
[ext_resource path="res://enemies/big_enemy_ship.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.90696, 8.15798 )

[sub_resource type="Animation" id=2]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 40, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.921569, 0.419608, 0.435294, 1 )

[node name="big_enemy_ship" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
frame = 3

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 2 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/death = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -10.1826, 0 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.148649, -0.0743258 )
scale = Vector2( 0.799321, 0.799321 )

[node name="directionTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 7.90495, 0 )
scale = Vector2( 1, 10 )
amount = 4
process_material = SubResource( 4 )

[node name="hittedTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="screenTimer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true
autostart = true
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="directionTimer" to="." method="_on_directionTimer_timeout"]
[connection signal="timeout" from="hittedTimer" to="." method="_on_hittedTimer_timeout"]
[connection signal="timeout" from="screenTimer" to="." method="_on_screenTimer_timeout"]
